--- a/app/views/works/index.html.slim
+++ b/app/views/works/index.html.slim
@@ -6,7 +6,7 @@ table
       th Name
       th Input args
       th Code lang
-      th Code
+      th Code preview
       th
       th
       th
@@ -14,10 +14,12 @@ table
   tbody
     - @works.each do |work|
       tr
-        td = work.name
+        td
+          strong = work.name
         td = work.input_args
         td = work.code_lang
-        td = work.code
+        td
+          pre = work.code[0..128]
         td = link_to 'Show', work
         td = link_to 'Edit', edit_work_path(work)
         td = link_to 'Destroy', work, data: {:confirm => 'Are you sure?'}, :method => :delete
