--- a/app/views/schedules/_form.html.slim
+++ b/app/views/schedules/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @schedule do |f|
+= form_for [@work, @schedule] do |f|
   - if @schedule.errors.any?
     #error_explanation
       h2 = "#{pluralize(@schedule.errors.count, "error")} prohibited this schedule from being saved:"
@@ -9,10 +9,9 @@
   .field
     = f.label :name
     = f.text_field :name
-  .field
-    = f.label :work_id
-    = f.number_field :work_id
+
   .field
     = f.label :cron
     = f.text_field :cron
+
   .actions = f.submit
