--- a/app/views/schedules/index.html.slim
+++ b/app/views/schedules/index.html.slim
@@ -14,12 +14,9 @@ table
     - @schedules.each do |schedule|
       tr
         td = schedule.name
-        td = schedule.work_id
+        td = schedule.work.name
         td = schedule.cron
         td = link_to 'Show', schedule
         td = link_to 'Edit', edit_schedule_path(schedule)
         td = link_to 'Destroy', schedule, data: {:confirm => 'Are you sure?'}, :method => :delete
 
-br
-
-= link_to 'New Schedule', new_schedule_path
