--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -5,7 +5,6 @@ h1 #{@work.name} tasks
 table
   thead
     tr
-      th Work
       th Start at
       th Output
       th
@@ -13,9 +12,9 @@ table
   tbody
     - @tasks.each do |task|
       tr
-        td = task.work_id
         td = task.created_at
-        td = task.output
+        td
+          pre = task.output.lines[0...5].join
         td = link_to 'Show', task
 
 br
