--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,5 +13,7 @@ html
         li = link_to "Scheudles", schedules_path
       ul
         li = link_to "Works", works_path
+      ul
+        li = link_to "Users", users_path
 
     = yield
