--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -16,4 +16,11 @@ html
       ul
         li = link_to "Users", users_path
 
+      - if current_user
+        ul
+          li = link_to "Logout", session_path(1), method: :delete
+      - else
+        ul
+          li = link_to "Login", new_session_path
+
     = yield
