--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,19 +8,6 @@ html
     = csrf_meta_tags
 
   body
-    .header
-      ul
-        li = link_to "Scheudles", schedules_path
-      ul
-        li = link_to "Works", works_path
-      ul
-        li = link_to "Users", users_path
-
-      - if current_user
-        ul
-          li = link_to "Logout", session_path(1), method: :delete
-      - else
-        ul
-          li = link_to "Login", new_session_path
-
+    .header = render 'header'
+      
     = yield
