--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -5,7 +5,7 @@ nav.navbar.navbar-default
 
     .collapse.navbar-collapse
       ul.nav.navbar-nav
-        li class=active_class(%w{works})
+        li class=active_class(%w{works tasks})
           = link_to "Works", works_path
         li class=active_class(%w{schedules})
           = link_to "Scheudles", schedules_path
