--- a/app/views/works/edit.html.slim
+++ b/app/views/works/edit.html.slim
@@ -1,8 +1,7 @@
-h1 Editing work
 
-== render 'form'
+.form_box
+  h1 Editing work
 
-= link_to 'Show', @work
-'|
-= link_to 'Back', works_path
+  == render 'form'
+
 
