--- a/app/views/schedules/edit.html.slim
+++ b/app/views/schedules/edit.html.slim
@@ -1,8 +1,5 @@
-h1 Editing schedule
+.form_box
+  h1 Editing schedule
 
-== render 'form'
-
-= link_to 'Show', @schedule
-'|
-= link_to 'Back', schedules_path
+  == render 'form'
 
