--- a/app/views/schedules/index.html.slim
+++ b/app/views/schedules/index.html.slim
@@ -1,6 +1,7 @@
-h1 Listing schedules
+.pull-right.table-actions
+  a.btn.btn-primary href=works_path(redirect_to: :new_schedule, choice_view: true) New Schedule
 
-table
+table.table.table-striped
   thead
     tr
       th Name
@@ -22,4 +23,3 @@ table
         td = link_to 'Edit', edit_schedule_path(schedule)
         td = link_to 'Destroy', schedule, data: {:confirm => 'Are you sure?'}, :method => :delete
 
-= link_to "New Schedule", works_path(redirect_to: :new_schedule, choice_view: true)
