--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,6 +1,7 @@
-h1 Listing users
+.pull-right.table-actions
+  a.btn.btn-primary href=new_user_path New User
 
-table
+table.table.table-striped
   thead
     tr
       th Email
@@ -22,4 +23,3 @@ table
 
 br
 
-= link_to 'New User', new_user_path
