Add user and user log
User need login
Add user_id to Work/Schedule/Task
Add UserLog if create/update/destroy record

--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -11,6 +11,8 @@ nav.navbar.navbar-default
           = link_to "Scheudles", schedules_path
         li class=active_class(%w{users})
           = link_to "Users", users_path
+        li class=active_class(%w{user_logs})
+          = link_to "UserLogs", user_logs_path
 
         
       ul.nav.navbar-nav.navbar-right
