--- a/app/views/works/index.html.slim
+++ b/app/views/works/index.html.slim
@@ -6,6 +6,7 @@ table.table.table-striped
   thead
     tr
       th Name
+      th Creator
       th Input args
       th Code lang
       th Code preview
@@ -18,6 +19,8 @@ table.table.table-striped
       tr
         td
           strong = work.name
+        td
+          strong = work.user.name
         td
           ul
             - work.input_args.each do |key, val|
